cros: Fix unnecessary black shelf background issue when device boot

This CL is more lightweight solution compared with the previous
attempts:
https://crrev.com/c/1229695
(An overkill. "no wallpaper" is not a valid UI state we'll support.)
https://crrev.com/c/1187547
(A risky change. Large number of tests failed.)
https://crrev.com/c/1173433
(Doesn't quite handle the "no wallpaper" case.)

Bug: 874015
Change-Id: I7656856d1b631b7f6d2555f932116ea08e7d23ec
Reviewed-on: https://chromium-review.googlesource.com/1237149
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Commit-Queue: Wenzhao (Colin) Zang <wzang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594504}
Former-commit-id: 16ebe3764ca550a1ab6f00a28264be324a2fe17f